# pipseed

./: README.md  doc.md  index.ts  package.json  pyproject.toml
pipseed/: __init__.py  __main__.py
tests/: test_pipseed.py
